# parquet-peek

backend/: .gitignore  README.md  pyproject.toml
backend/parquet_peek_vue/: main.py
frontend/: package-lock.json
frontend/src/: App.vue
frontend/src/components/: DataViewer.vue
